feat: V08 - Découpe en composants

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "5.3.1",
     "class-transformer": "0.5.1",
     "jquery": "3.7.0",
+    "lodash-es": "4.17.21",
     "oidc-client": "1.11.5",
     "popper.js": "1.16.1",
     "reflect-metadata": "0.1.13",
@@ -35,6 +36,7 @@
     "@angular-devkit/build-angular": "16.2.0",
     "@angular/cli": "16.2.0",
     "@angular/compiler-cli": "16.2.0",
+    "@types/lodash-es": "4.17.8",
     "typescript": "5.1.6"
   }
 }
