--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "16.2.0",
+    "@angular/cdk": "^16.2.0",
     "@angular/common": "16.2.0",
     "@angular/compiler": "16.2.0",
     "@angular/core": "16.2.0",
     "@angular/forms": "16.2.0",
+    "@angular/material": "^16.2.0",
+    "@angular/material-date-fns-adapter": "^16.2.0",
     "@angular/platform-browser": "16.2.0",
     "@angular/platform-browser-dynamic": "16.2.0",
     "@angular/platform-server": "16.2.0",
     "@angular/router": "16.2.0",
     "bootstrap": "5.3.1",
     "class-transformer": "0.5.1",
+    "date-fns": "^2.30.0",
     "jquery": "3.7.0",
     "lodash-es": "4.17.21",
     "oidc-client": "1.11.5",
